--- a/package.json
+++ b/package.json
@@ -1,53 +1,38 @@
 {
     "name": "pixelit_webui",
-    "version": "0.0.1",
+    "version": "0.1.0",
     "private": true,
     "scripts": {
-        "build-on-pipeline": "vue-cli-service build",
-        "serve": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
-        "serve-win": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
-        "build": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build",
-        "build-win": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build",
-        "lint": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service lint",
-        "lint-win": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service lint"
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
     },
     "dependencies": {
-        "@babel/polyfill": "^7.11.5",
-        "@types/prismjs": "^1.26.5",
         "apexcharts": "^3.44.0",
         "core-js": "^3.38.1",
         "leaflet": "^1.9.4",
+        "leaflet.markercluster": "^1.5.3",
         "mutationobserver-shim": "^0.3.7",
         "popper.js": "^1.16.1",
-        "portal-vue": "^2.1.7",
+        "portal-vue": "^3.0.0",
         "prismjs": "^1.29.0",
-        "vue": "^2.7.8",
-        "vue-apexcharts": "^1.6.2",
+        "vue": "^3.4.15",
+        "vue3-apexcharts": "^1.8.0",
         "vue-cookies": "^1.8.6",
-        "vue-native-websocket": "^2.0.15",
-        "vue-prism-editor": "^1.3.0",
-        "vue-router": "^3.5.1",
-        "vue-spinners": "^1.0.2",
-        "vue2-leaflet": "^2.7.1",
-        "vue2-leaflet-markercluster": "^3.1.0",
-        "vuesalize": "^0.2.0",
-        "vuetify": "^2.6.10",
-        "vuex": "^3.6.2"
+        "vue-native-websocket-vue3": "^3.0.2",
+        "vue-prism-editor": "^2.0.0-alpha.2",
+        "vue-router": "^4.2.5",
+        "vue3-leaflet": "^1.0.2",
+        "vuetify": "^3.6.5",
+        "vuex": "^4.1.0"
     },
     "devDependencies": {
-        "@vue/cli-plugin-babel": "~4.5.0",
-        "@vue/cli-plugin-eslint": "~4.5.19",
-        "@vue/cli-plugin-router": "^5.0.8",
-        "@vue/cli-plugin-vuex": "^5.0.8",
-        "@vue/cli-service": "~4.5.0",
-        "babel-eslint": "^10.1.0",
-        "eslint": "^6.7.2",
-        "eslint-plugin-vue": "^6.2.2",
-        "sass": "~1.32.13",
-        "sass-loader": "^10.3.1",
-        "vue-cli-plugin-vuetify": "^2.4.2",
-        "vue-template-compiler": "^2.7.16",
-        "vuetify-loader": "^1.9.2"
+        "@vitejs/plugin-vue": "^4.5.1",
+        "eslint": "^8.57.0",
+        "eslint-plugin-vue": "^9.21.0",
+        "sass": "^1.69.5",
+        "sass-loader": "^13.3.2",
+        "vite": "^4.5.2"
     },
     "eslintConfig": {
         "root": true,
@@ -55,11 +40,12 @@
             "node": true
         },
         "extends": [
-            "plugin:vue/essential",
+            "plugin:vue/vue3-essential",
             "eslint:recommended"
         ],
         "parserOptions": {
-            "parser": "babel-eslint"
+            "ecmaVersion": 2020,
+            "sourceType": "module"
         },
         "rules": {}
     },
