--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,15 @@
 VUE_APP_PIXELIT_HOST=my-pixelit-host.local
 VUE_APP_DEMO_MODE=false
 VUE_APP_API_SERVER=http://my-api-host.local/api
+
+# Вмикає чи вимикає компонент цілком
+VITE_ENABLE_LANG_SWITCHER=true
+
+# Мова за замовчуванням (якщо користувацька не серед availableLocales)
+VITE_DEFAULT_LOCALE=en
+
+# Як відображати мову:
+# 'flags' — тільки прапори
+# 'code'  — тільки код (UK, EN, DE)
+# 'text'  — повний текст (English, Українська)
+VITE_LANG_DISPLAY_MODE=flags
