--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@mdi/font": "^7.4.47",
+        "@mdi/js": "^7.4.47",
         "apexcharts": "^3.44.0",
         "core-js": "^3.38.1",
         "leaflet": "^1.9.4",
@@ -21,6 +21,7 @@
         "proj4leaflet": "^1.0.2",
         "vue": "^3.4.15",
         "vue-cookies": "^1.8.6",
+        "vue-i18n": "^12.0.0-alpha.2",
         "vue-native-websocket-vue3": "^3.0.2",
         "vue-prism-editor": "^2.0.0-alpha.2",
         "vue-router": "^4.2.5",
@@ -30,6 +31,7 @@
         "vuex": "^4.1.0"
     },
     "devDependencies": {
+        "@mdi/font": "^7.4.47",
         "@vitejs/plugin-vue": "^4.5.1",
         "eslint": "^8.57.0",
         "eslint-plugin-vue": "^9.21.0",
